@@ -81,6 +81,7 @@ Version 1.11.1+svn:
    * Made wmllint recognize victory_string, defeat_string,
      gold_carryover_string, and notes_string (all from the [objectives] tag) as
      attributes that need to be made translatable
+   * Added -Wdocumentation to the CMake pedantic flags.
 
 Version 1.11.1:
  * AI:
